--- a/src/app/containers/scoreboard/scoreboard.component.scss
+++ b/src/app/containers/scoreboard/scoreboard.component.scss
@@ -115,7 +115,7 @@ mat-card-content {
       min-width: 0 !important;
       overflow: visible;
       text-align: center !important;
-      margin: 0 0 0 -10px !important;
+      margin: 0 !important;
       padding: 0 !important;
     }
 
@@ -137,7 +137,7 @@ mat-card-content {
       min-width: 0 !important;
       overflow: visible;
       text-align: center !important;
-      margin: 10px -5px 0 0 !important;
+      margin: 10px 0 0 0 !important;
       padding: 0 !important;
     }
   }
